--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 README 
 ======
 
-Readme for your plugin 
+Readme for DXFImport plugin 
 
-    * Plugin author is Upliner <xvmv@mail.ru>
+    * Plugin authors are Antochi Adrian and Trifan Adrian
 
     * The license for plugin is "GPL v2 or later".
